<resources>
    <string name="app_name">adamkotlin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logintext">Login</string>
    <string name="usernametext">Username</string>
    <string name="full_nametext">Full Name</string>
    <string name="daftartext">Daftar</string>
    <string name="passwordtext">Password</string>
    <string name="password_confirmationtext">Password Confirmation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>